--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="Style.css" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <script src="Script.js" defer></script>
   </head>
   <body>
     <main class="calculator-grid">
